[package]
name = "centaur-technical-indicators"
version = "1.2.1"
edition = "2021"
description = "WASM bindings for Centaur Technical Indicators for Node and browser"
license = "MIT"
repository = "https://github.com/ChironMind/CentaurTechnicalIndicators-JS"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
centaur_technical_indicators = "1.2.1"
# centaur_technical_indicators = { path = "../CentaurTechnicalIndicators-Rust" } # for local dev

[package.metadata.wasm-pack.profile.release]
# Optimize for size; tweak as needed
wasm-opt = false  # Disabled to avoid download issues in CI environment
